--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "framer-motion": "^10.16.2",
     "next": "13.4.16",
     "next-images": "^1.8.5",
     "postcss": "8.4.28",
