--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.2",
+    "moment": "^2.29.4",
     "next": "13.4.16",
     "next-images": "^1.8.5",
     "postcss": "8.4.28",
