--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.65.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
