--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-slick": "^0.29.0",
     "sass": "^1.65.1",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
